# esp-motor-control

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  platformio.ini
include/: README
lib/BLEComm/: BLEComm.cpp  BLEComm.h
lib/MotorControl/: MotorControl.cpp  MotorControl.h  README.md  README_CN.md  library.json
lib/MotorControl/examples/BasicMovements/: BasicMovements.ino
lib/SensorControl/: SensorControl.cpp  SensorControl.h
src/: main.cpp
test/: README  platformio.ini
test/src/: ble_test.cpp  main.cpp.bak
